[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Turn 01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Palanca.gd" type="Script" id=2]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Turn 02.png" type="Texture" id=3]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Idle 02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Idle 04.png" type="Texture" id=5]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Idle 01.png" type="Texture" id=6]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Idle 05.png" type="Texture" id=7]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Idle 06.png" type="Texture" id=8]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Turn 03.png" type="Texture" id=9]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Turn 04.png" type="Texture" id=10]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sprite/Ship Helm Idle 03.png" type="Texture" id=11]
[ext_resource path="res://Assets/Game/Decoracion/Palanca/Sound/RetroBlop.ogg" type="AudioStream" id=12]

[sub_resource type="Animation" id=3]
resource_name = "Abierto"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Cerrado"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 12.0416

[node name="Palanca" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Abierto = SubResource( 3 )
anims/Cerrado = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[connection signal="body_entered" from="." to="." method="_on_Palanca_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
